--- a/pjt_05/movies/templates/movies/detail.html
+++ b/pjt_05/movies/templates/movies/detail.html
@@ -12,4 +12,7 @@
   <p>{{ movie.score }}</p>
   <p>{{ movie.poster_url }}</p>
   <p>{{ movie.description }}</p>
+  <a class="btn btn-primary" href="/movies/" role="button">영화 목록</a>
+  <a class="btn btn-primary" href="./edit/" role="button">영화 정보 수정</a>
+  <a class="btn btn-warning" href="./delete/" role="button">영화 정보 삭제</a>
 {% endblock content %}
