--- a/pjt_06/movies/templates/movies/create.html
+++ b/pjt_06/movies/templates/movies/create.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
-
+{% load bootstrap4 %}
 {% block title %}영화 정보 생성{% endblock title %}
 
 {% block body %}
   <h1>영화 정보 생성</h1>
   <form method="POST">
     {% csrf_token %}
-    {{ movie_form.as_p }}
-    <button type="submit">생성하기</button>
+    
+    {% bootstrap_form movie_form layout='horizontal' %}
+    {% buttons submit="생성하기" reset="취소" %}{% endbuttons %}
   </form>
   <a href="{% url 'movies:index' %}"><button>뒤로가기</button></a>
 {% endblock body %}
