--- a/pjt_07/movies/templates/movies/detail.html
+++ b/pjt_07/movies/templates/movies/detail.html
@@ -15,6 +15,19 @@
 <form action="{% url 'movies:delete' movie.pk %}" method="POST">{% csrf_token %}<button type="submit">삭제하기</button></form>
 <hr>
 
+<a href=" {% url 'movies:like' movie.pk %} ">
+  {% if request.user in movie.like_users.all %}
+    ♥
+  {% else %}
+    ♡
+  {% endif %}
+</a>
+
+<span>
+{{ movie.like_users.all | length }}명이 이 영화를 좋아합니다.
+</span>
+
+
 <h3>한줄평</h3>
 <form action="{% url 'movies:reviews' movie.pk %}" method="POST">
   {% csrf_token %}
