빠뜨린 요구사항 점검 및 수정
 - 유저이름 클릭시 디테일 페이지 이동 추가
 - 리뷰 삭제 및 login require 추가

--- a/pjt_07/accounts/templates/accounts/index.html
+++ b/pjt_07/accounts/templates/accounts/index.html
@@ -7,6 +7,6 @@ accounts index
 
 {% block body %}
 {% for user in users %}
-{{user.pk}} {{user}} <br>
+<p>{{user.pk}} <a href="{% url 'accounts:detail' user.pk %}">{{user}}</a></p>
 {% endfor %}
 {% endblock body %}
